--- a/frontend/backup/login.html
+++ b/frontend/backup/login.html
@@ -10,24 +10,21 @@
         <div id="root">
             <div class="login-con" id="login-con-id">
                 <div class="head" id="login-con-head-id">
-                    <h2>Login</h2>
+                    <p>Login</p>
                 </div>
                 <hr>
                 <div class="credentials" id="login-con-credentials-id">
                     <div class="input-con" id="login-con-credentials-username-id">
-                        <p>Username</p>
-                        <input type="text" name="username-input" maxlength="128" placeholder="Username">
+                        <p>Username:</p>
+                        <input type="text" name="username-input" maxlength="128" placeholder=" Enter your username...">
                     </div>
                     <div class="input-con" id="login-con-credentials-password-id">
-                        <p>Password</p>
-                        <input type="text" name="password-input" maxlength="128" placeholder="Password">
+                        <p>Password:</p>
+                        <input type="text" name="password-input" maxlength="128" placeholder=" Enter your password...">
                     </div>
                 </div>
                 <div class="button">
                     <p>Login</p>
-                </div>
-                <div class="register">
-                <a href="register.html" style="text-decoration: none;">Create Account</a>
                 </div>
             </div>
         </div>
