2023-06-03 Improved some CSS

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -20,7 +20,7 @@
                     </div>
                     <div class="input-con" id="login-con-credentials-password-id">
                         <p>Password</p>
-                        <input type="text" name="password-input" maxlength="128" placeholder="Password">
+                        <input type="password" name="password-input" maxlength="128" placeholder="Password">
                     </div>
                 </div>
                 <div class="button">
