--- a/frontend/register.html
+++ b/frontend/register.html
@@ -8,7 +8,7 @@
     <body>
         <h1>StuTrack</h1>
         <div id="root">
-            <div class="login-con" id="login-con-id">
+            <div class="register-con" id="login-con-id">
                 <div class="head" id="login-con-head-id">
                     <h2>Register</h2>
                 </div>
@@ -24,7 +24,7 @@
                     </div>
                     <div class="input-con" id="login-con-credentials-password-id">
                         <p>Password</p>
-                        <input type="text" name="password-input" maxlength="128" placeholder="Password">
+                        <input type="password" name="password-input" maxlength="128" placeholder="Password">
                     </div>
                 </div>
                 <div class="button">
