--- a/frontend/register.html
+++ b/frontend/register.html
@@ -10,7 +10,7 @@
         <div id="root">
             <div class="login-con" id="login-con-id">
                 <div class="head" id="login-con-head-id">
-                    <h2>Register</h2>
+                    <h2>Create Account</h2>
                 </div>
                 <hr>
                 <div class="credentials" id="login-con-credentials-id">
@@ -28,12 +28,13 @@
                     </div>
                 </div>
                 <div class="button">
-                    <p>Register</p>
+                    <p>Create Account</p>
                 </div>
                 <div class="login">
                     <a href="login.html" style="text-decoration: none;">Sign in</a>
                 </div>
             </div>
         </div>
+        <script src="register.js"></script>
     </body>
 </html>
