--- a/old/register.html
+++ b/old/register.html
@@ -31,7 +31,7 @@
                     <p>Create Account</p>
                 </div>
                 <div class="login">
-                    <a href="login.html" style="text-decoration: none;">Sign in</a>
+                    <a href="login.js" style="text-decoration: none;">Sign in</a>
                 </div>
             </div>
         </div>
